<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sistem_pendaftaran_mahasiswa"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="7sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_nama"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:paddingLeft="20dp"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/nama"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="7sp"/>
            <RadioGroup
                android:id="@+id/opsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rd_laki"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5sp"
                    android:textColor="@color/white2"
                    android:text="@string/laki_laki"/>

                <RadioButton
                    android:id="@+id/rd_perempuan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5sp"
                    android:textColor="@color/white"
                    android:text="@string/perempuan"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="7sp"
                android:text="@string/nik"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_nik"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/nomor_induk_kependudukan"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usia"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="7sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_umur"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edittxt_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="20dp"
                android:hint="@string/usia"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_alamat"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edittxt_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingStart="20dp"
                android:hint="@string/alamat"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asal_sekolah"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_institusi"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edittxt_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingStart="20dp"
                android:hint="@string/asal_institusi"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/simpan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="16sp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:background="@drawable/edittxt_bg"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nama"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nik"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/umur"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alamat"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/asal_institusi"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sb"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">


                    <TextView
                        android:id="@+id/hasil_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hasil_jk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hasil_nik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hasil_umur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hasil_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/hasil_institusi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>